Fix gjs_crash_after_timeout() problems

Fix two major issues with gjs_crash_after_timeout():

 * It didn't notice the parent exiting normally so the forked off
   child would keep running until the timeout. This is fixed by
   using a pipe between the parent and child and watching for the
   pipe to get immediate notification of parent exit.

 * The forked off child process would return to the caller of
   gjs_crash_after_timeout() after the timeout completed and it
   killed the parent this would typically fail horribly. Call exit()
   instead.

http://bugzilla.gnome.org/show_bug.cgi?id=592962